New UI works, dispenses drinks

--- a/static/dev.html
+++ b/static/dev.html
@@ -40,6 +40,8 @@
       <command-button comm="prime"></command-button>
       <command-button comm="40 random drinks"></command-button>
       <command-button comm="vent"></command-button>
+      <command-button comm="hold_pressure"></command-button>
+      <command-button comm="release_pressure"></command-button>
       <!--<robot-status></robot-status>-->
       <load-cell></load-cell>
     </div>
