--- a/static/selector.html
+++ b/static/selector.html
@@ -50,7 +50,7 @@
     <core-toolbar id="mainheader">
       <paper-icon-button id="navicon" 
         icon="arrow-back"></paper-icon-button>
-      <span flex>search</span>
+      <paper-input id="search" label="Search" value={{search}} flex></paper-input>
       <paper-icon-button id="searchbutton" 
         icon="search"></paper-icon-button>
     </core-toolbar>
