--- a/static/elements/drinks-list.html
+++ b/static/elements/drinks-list.html
@@ -15,6 +15,7 @@
         hide_if_not_selected="{{drinkSelected}}"
         show_details=false
         user_name="{{userName}}"
+        collapsing_ready=false
         submitted=true
         search="{{search}}"
         on-tap="{{drinkTapped}}">
