--- a/static/selector.html
+++ b/static/selector.html
@@ -34,7 +34,7 @@
       background: white;
     }
     core-toolbar {
-      background-color: #03A9F4;
+      background-color: #33A9FF;
     }
     p {
       margin: 20px;
