7/10 modifications to get things running smoothly

--- a/static/selector.html
+++ b/static/selector.html
@@ -47,13 +47,14 @@
 <body fullbleed vertical layout unresolved>
   <h1>N.E.Bree-8</h1>
   <core-header-panel flex>
+  <!--
     <core-toolbar id="mainheader">
       <paper-icon-button id="navicon" 
         icon="arrow-back"></paper-icon-button>
       <paper-input id="search" label="Search" value={{search}} flex></paper-input>
       <paper-icon-button id="searchbutton" 
         icon="search"></paper-icon-button>
-    </core-toolbar>
+        </core-toolbar>-->
     <drinks-list></drinks-list>
       <!--
     <drink-selector drink="Margarita" image="margarita.jpg"></drink-selector>
