Added new thumbs and pointed from UI to thumbs rather than images.

--- a/static/elements/drink-selector.html
+++ b/static/elements/drink-selector.html
@@ -49,7 +49,7 @@
           </div>
         </core-collapse>
         <core-image
-          src="images/{{image}}"
+          src="thumbs/{{image}}"
           sizing="contain"
           style="width:100px; height:100px; background-color: lightgray;">
         </core-image>
