Moved around outputs to run the cup dispenser.

--- a/static/dev.html
+++ b/static/dev.html
@@ -42,6 +42,8 @@
       <command-button comm="vent"></command-button>
       <command-button comm="hold_pressure"></command-button>
       <command-button comm="release_pressure"></command-button>
+      <command-button comm="dispense_cup"></command-button>
+      <command-button comm="dispense_cup_full_test"></command-button>
       <!--<robot-status></robot-status>-->
       <load-cell></load-cell>
     </div>
