Lots of hacking on a bug I can't find a fix for.
Details:
- serial writes hang if you don't fall back to an empty queue within 1m
  45s.
- Turning off the LED module in the UC doesn't help
- Turning off the IO module in the UC doesn't help
- Reconnecting serial during faults doesn't work (we stay on ttyACM0 the
  whole time)

Next things to try:
- turning off the led show

Workarounds: Don't queue up actions beyond a single drink.

--- a/static/dev.html
+++ b/static/dev.html
@@ -38,6 +38,7 @@
       <command-button comm="test1 drink"></command-button>
       <command-button comm="test drink"></command-button>
       <command-button comm="prime"></command-button>
+      <command-button comm="flush"></command-button>
       <command-button comm="40 random drinks"></command-button>
       <command-button comm="vent"></command-button>
       <command-button comm="hold_pressure"></command-button>
