Also display median on load cell graph

--- a/static/load_cell.html
+++ b/static/load_cell.html
@@ -15,6 +15,12 @@
       stroke-width: 1;
       fill: none;
     }
+
+    .med-line {
+      stroke: green;
+      stroke-width: 1;
+      fill: none;
+    }
     
     .axis {
       shape-rendering: crispEdges;
@@ -103,6 +109,7 @@
     
     graph.append("svg:path").attr("class", "raw-line");
     graph.append("svg:path").attr("class", "avg-line");
+    graph.append("svg:path").attr("class", "med-line");
     function refreshData() {
       d3.json("/load_cell.json", function(error, json) {
         if (error) return console.warn(error);
@@ -112,13 +119,16 @@
           var s = data.slice(i, i + 50);
           return [data[i][0], d3.sum(s.map(get_y)) / s.length];
         });
+        var med_data = data.map(function (_, i) {
+          return [data[i][0], d3.median(data.slice(i, i + 50).map(get_y))];
+        });
         if (data.length > 50) {
           var s = data.slice(data.length - 50, data.length);
           var avg = d3.sum(s.map(get_y)) / s.length;
           var stddev = Math.sqrt(
               d3.sum(s.map(function(r) { return Math.pow(r[1] - avg, 2); }))
              / (s.length - 1));
-           avg_elt.innerHTML = avg
+           avg_elt.innerHTML = avg;
            std_dev_elt.innerHTML = stddev;
         }
         x = d3.scale.linear().domain(d3.extent(data.map(get_x))).range([0, w]);
@@ -133,6 +143,8 @@
           .attr("d", line(data));
         graph.select(".avg-line")
           .attr("d", line(avg_data));
+        graph.select(".med-line")
+          .attr("d", line(med_data));
       });
     }
 
