Robot display finished for now.

--- a/static/display.html
+++ b/static/display.html
@@ -18,27 +18,47 @@
     </div>
     <div layout="row">
       <div layout="column" flex="50">
-        <div ng-if="ctrl.queue.length == 0" class="order-current" flex="10">
+        <div ng-if="ctrl.queue.length == 0" class="order-current">
           Just sitting around...
         </div>
-        <div ng-if="ctrl.queue.length > 0" class="order-current" flex="10">
-          Hey <span class="user_name">{{ctrl.queue[0].user_name}}</span>!
-          I'm making your <span class="drink_name">{{ctrl.queue[0].drink_name}}!
-        </div>
-        <div class="queue" layout="row" flex>
+	<div ng-if="ctrl.queue.length > 0" layout="column">
+	  <div class="order-current">
+	    <div class="queue-banner">Now making:</div>
+	    <span class="drink_name">{{ctrl.queue[0].drink_name}}</span>
+	    for
+            <span class="user_name">{{ctrl.queue[0].user_name}}</span>
+          </div>
+	</div>
+        <div class="queue" layout="column">
           <div ng-if="ctrl.queue.length > 1" class="queue-banner" flex="35">
             Next up:</div>
           <div class="queue-list" flex>
-            <div ng-if="$index > 0" ng-repeat="order in ctrl.queue">
-              {{$index}} | {{order.drink_name}} for {{order.user_name}}
+            <div ng-if="$index > 0" ng-repeat="order in ctrl.queue"
+		 layout="row">
+	      <div class="position-cont" layout="row"
+		   layout-align="center center" flex="10">
+		<div class="position">{{$index}}</div>
+	      </div>
+	      <div class="queue-item" flex>
+		{{order.drink_name}}
+		<span class="for">for</span>
+		{{order.user_name}}
+	      </div>
             </div>
           </div>
         </div>
       </div>
       <div flex="50" layout="column" layout-align="center center">
-        <div id="graph" class="aGraph"></div>
-        <div class="stat">Avg: <span id="avg"></span></div>
-        <div class="stat">Std dev: <span id="stddev"></span></div>
+        <div>
+	  <h3 class="graph-header">Cocktail weight</h3>
+	  <div id="graph" class="aGraph"></div>
+          <div class="stat">Avg: <span id="avg"></span></div>
+          <div class="stat">Std dev: <span id="stddev"></span></div>
+	</div>
+	<div class="expl">
+	  * If you've ordered and don't see your name, talk to a specialist
+	  to get your drink approved.
+	</div>
       </div>
     </div>
   </div>
