--- a/static/dev.html
+++ b/static/dev.html
@@ -30,7 +30,7 @@
   <h1>NE Bre 8 Dev Console</h1>
   <div class="container" layout vertical center>
     <div layout vertical justified>
-      <div layout horizontal><command-button comm="calibrate"></command-button></div>
+      <command-button comm="calibrate"></command-button>
       <control-panel comm="move to position (inches)"></control-panel>
       <control-panel comm="fill (oz, pos)"></control-panel>
       <command-button comm="compressor-on"></command-button>
@@ -45,6 +45,7 @@
       <command-button comm="release_pressure"></command-button>
       <command-button comm="dispense_cup"></command-button>
       <command-button comm="dispense_cup_full_test"></command-button>
+      <command-button comm="slam_stir"></command-button>
       <!--<robot-status></robot-status>-->
       <load-cell></load-cell>
     </div>
